--- a/src/style.css
+++ b/src/style.css
@@ -588,8 +588,100 @@ video {
   }
 }
 
-.h-56 {
-  height: 14rem;
+.box {
+  min-height: 6rem;
+  width: 100%;
+  border-radius: 0.375rem;
+  border-width: 2px;
+  padding: 1.25rem;
+}
+
+.btn {
+  position: absolute;
+  right: 3%;
+  top: 0.5rem;
+  margin: 0.25rem;
+  width: 4rem;
+  border-radius: 0.375rem;
+  border-width: 2px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
+}
+
+.relative {
+  position: relative;
+}
+
+.order-1 {
+  order: 1;
+}
+
+.order-2 {
+  order: 2;
+}
+
+.order-3 {
+  order: 3;
+}
+
+.order-5 {
+  order: 5;
+}
+
+.order-7 {
+  order: 7;
+}
+
+.mt-\[11rem\] {
+  margin-top: 11rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
+.min-h-\[60\%\] {
+  min-height: 60%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .bg-black {
@@ -597,17 +689,20 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.p-0 {
+  padding: 0px;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
