--- a/src/style.css
+++ b/src/style.css
@@ -608,28 +608,41 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
 }
 
+.btn-2 {
+  min-width: 4rem;
+  border-radius: 0.375rem;
+  border-width: 2px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
+.btn-2:hover {
+  border-style: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.menu-box {
+  margin: 1.5rem;
+  min-height: 6rem;
+  width: 40%;
+  border-radius: 0.375rem;
+  border-width: 2px;
+  padding: 0.25rem;
+}
+
 .relative {
   position: relative;
 }
 
-.order-1 {
-  order: 1;
-}
-
-.order-2 {
-  order: 2;
-}
-
-.order-3 {
-  order: 3;
-}
-
-.order-5 {
-  order: 5;
-}
-
-.order-7 {
-  order: 7;
+.m-0 {
+  margin: 0px;
 }
 
 .mt-\[11rem\] {
@@ -648,6 +661,10 @@ video {
   height: 4rem;
 }
 
+.h-\[7rem\] {
+  height: 7rem;
+}
+
 .max-h-full {
   max-height: 100%;
 }
@@ -656,8 +673,16 @@ video {
   min-height: 60%;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-\[50\%\] {
   width: 50%;
+}
+
+.w-\[85\%\] {
+  width: 85%;
 }
 
 .w-full {
@@ -668,12 +693,20 @@ video {
   flex-wrap: wrap;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
 
 .justify-center {
   justify-content: center;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-md {
@@ -702,7 +735,17 @@ video {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
